@@ -1,9 +1,14 @@
-# 概述
-* 基于Netty的轻量级微服务开发框架。
-* 特点: 符合Java标准、轻量级、没有无用的库、内存占用少、快速服务请求、可维护性高
-* 支持IOC、AOP，提供mysql、dubbo、redis、nacos、rocketmq、sentinel等插件
-* 使用说明：
-新创建的java项目只需要引入一下两个依赖：
+# Overview
+
+* Based on Java20
+* JVM parameters that need to be added: --enable-preview--add-modulesjdk.incubator.concurrent-ea--add-opensjava.base/java.lang=ALL-UNNAMED--add-opensjava.base/jdk.internal.misc=ALL-UNNAMED-Dio.netty.tryReflectionSetAccessible=true
+* A lightweight microservice development framework that can be embedded into the Spring framework.
+* A lightweight microservices development framework. It can be embedded into the Spring framework.
+* Features: Compliant with Java standards, lightweight, no unnecessary libraries, low memory footprint, fast service
+  requests, high maintainability, and supports plugin extensions.
+* 支持IOC、AOP，提供mysql、dubbo、redis、nacos、rocketmq、sentinel Waiting for plugins
+* Supports IOC and AOP, offers plugins for MySQL, Dubbo, Redis, Nacos, RocketMQ, Sentinel, and more.
+* User Manual：
 *         <dependency>
             <artifactId>docean</artifactId>
             <groupId>com.xiaomi.youpin</groupId>
@@ -14,9 +19,11 @@
             <groupId>com.xiaomi.youpin</groupId>
             <version>1.4-SNAPSHOT</version>
         </dependency>
-  docean包中主要提供了包括注解的扫描处理、bean的初始化及载入容器等项目框架的初始化流程。
-  plugin包中加入了对于一些项目常用的依赖的扩展支持，如nacos、dubbo、mybatis等等。
-* 启动类中指定服务端口：
+  The docean package mainly provides the initialization process of the project framework, including annotation scanning
+  processing, bean initialization, and loading into the container.
+  The plugin package has added extended support for some commonly used dependencies in projects, such as nacos, dubbo,
+  mybatis, and so on.
+* rate limited or exceeded quota
 *     public static void main(String... args) {
         try {
             Aop.ins().init(Maps.newLinkedHashMap());
@@ -31,6 +38,4 @@
             System.exit(-1);
         }
   }
-启动Bootstrap类即可运行server。
-* 对于提供http接口的项目，docean中提供与spring保持一致的注解例如:@Controller、@RequestMapping等
-* 主要作者: 文榜 丁佩 张志勇 刘玉冲 张秀华 丁涛 志东 振兴
+* Main authors: Wenbang, Dingpei, Zhang Zhiyong, Ding Tao, Zhidong, Zhenxing
